--- a/assignment1/EMalgorithm/emPartAssignment1.tex
+++ b/assignment1/EMalgorithm/emPartAssignment1.tex
@@ -52,7 +52,7 @@
 \usepackage{graphicx}
 \fi
 \title{An Examination of the Expected Maximization Algorithm Over an Eye}
-\author{  }
+\author{Daniel D. Beatty  }
 
 \date{2012-04-28}
 
@@ -72,11 +72,17 @@
 
 \section{Specification and Organization} % (fold)
 \label{sec:specification}
-For the exercise reported here, there is a digital picture of a human retina as shown in figure \ref{}.  The objective of the work is to 
+For the exercise reported here, there is a digital picture of a human retina as shown in figure \ref{fig:8706423-90odl}.  The objective of the work is to 
 \begin{enumerate}
 	\item Take the gradient of the monochrome image
-	\item Use the Expected-Maximization algorithm to extract the edge points from the blurred optical disc boundary.
+	\item Use the Expected-Maximization (EM) algorithm to extract the edge points from the blurred optical disc boundary.
 \end{enumerate}
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[height=3in]{8706423-90odl.png}
+	\caption{Original Image}
+	\label{fig:8706423-90odl}
+\end{figure}
 
 %You are given a retinal digital picture in color.  Take the gradient of the monochrome image and use the Expectation-Maximization (EM) algorithm to extract the edge points from the blurred optic disc boundary.
 
@@ -85,23 +91,21 @@ For the exercise reported here, there is a digital picture of a human retina as 
 \section{Background} % (fold)
 \label{sec:background}
 
-\subsection{Origins of Expected Maximization} % (fold)
-\label{sub:origins_of_expected_maximization}
-The expected maximization algorithm is credited as first published in \cite{Dempster77maximumlikelihood}.  Various explanations have appeared in publications like \cite{duda-hart-stork,Moon96theexpectation-maximization, Joo_expectationmaximization}.    %In \cite{yamazaki98introduction}, a Gaussian approach is applied to detecting the edges from the classic peppers image.  
+The expected maximization algorithm is credited as first published in \cite{Dempster77maximumlikelihood}.  Various explanations have appeared in publications like \cite{duda-hart-stork,Moon96theexpectation-maximization, Joo_expectationmaximization}.    
 
-EM extends properties of Maximum Likelihood Estimation (MLE) methods by determining via iterative convergence.  %This  based on observations from an incomplete set.  %of what most of the publication the governing parameters of a particular data-set.   
-%In particular,  uncorrupted cases may use sufficient statistics acquired via MLE  \cite{duda-hart-stork}.
-\cite{Dempster77maximumlikelihood} showed that algorithm is applied effectively to two datasets.  One data set is observed and the other dataset is realized from the observed dataset.  This application implies that there is a mapping between the two datasets.   The dataset realized from the observed data set is considered a complete dataset.  
+In some explanations, EM extends properties of Maximum Likelihood Estimation (MLE) methods by determining the iterative convergence of sufficient statistics.
+\cite{Dempster77maximumlikelihood} showed that the EM algorithm is applied effectively to two datasets.  One data set is observed and the other dataset is realized from the observed dataset.  This application implies that there is a mapping between the two datasets, where as the observed data set itself is deemed incomplete.   The dataset realized from the observed data set is considered a complete dataset.  
 
 In general, the equation for the terminating condition of the EM algorithm \cite{duda-hart-stork} is stated in equation \ref{em_basis}.  
 \begin{equation}
 \vec{\Theta}^* = \arg \max_{\Theta} \sum_{\vec{x}\in \mathcal{X}^n} E[ \ln p( \vec{x} | \vec{\theta} ,\vec{y}) ] \label{em_basis}
 \end{equation}
 The meaning of the terms in equation \ref{em_basis} are as follows:
-%Also stated in most text, the general equation for the EM algorithm is defined in equation \ref{em_basis} where
+
 \begin{itemize}
 \item  $\mathbf{X}$ is the true data set, $\vec{x}$ is the true data set sample, 
- \item $\vec{\Theta}$ is the set of parameters for the statistic, and 
+ \item $\vec{\Theta}$ is the set of parameters for the statistic, 
+	\item $\vec{\theta}$ is a previous estimate of the set of parameters,  and 
  \item $\vec{y}$ is the data sample in the given data set.
  \end{itemize}
 
@@ -121,12 +125,9 @@ where :
 
  In \cite{yamazaki98introduction}, the complete dataset is assumed to be a collection of Gaussian datasets.   A Gaussian dataset is defined by its mean and variance (or its multivariate equivalent.)  
 
-In the Gaussian case, each class has a proportion that defines how much each class contributes as determined by their mean and covariance (denoted $\alpha, \vec{\mu}, \mathbf{\Sigma}$ respectively).   If one acquires a sample as an initial set, %the question
- is there an EM algorithm that will refine these sufficient statistics?   %One paper by Frank Dellaert shows an example of yes.  The Q function is presented as a matrix, which must be reduced to a form that allows the less than operator to be valid.  
-In \cite{yamazaki98introduction}, there is an example using a matrix as the result of the expectation step.  From this expectation, the sufficient statistics for the next step are %is
- computed.   When an expected equation forms a matrix $\mathbf{A}$, as in equation %The expected equation is as in equation 
+In the Gaussian case, each class has a proportion that defines how much each class contributes as determined by their mean and covariance (denoted $\alpha, \vec{\mu}, \mathbf{\Sigma}$ respectively).   If one acquires a sample as an initial set, there is an EM algorithm that will find these sufficient statistics. In \cite{yamazaki98introduction}, there is an example using a matrix as the result of the expectation step.  From this expectation, the sufficient statistics for the next step are computed.   When an expected equation forms a matrix $\mathbf{A}$, as in equation 
 \ref{expectedMatrix}, it is called an expected matrix.
-%forms a matrix $\mathbf{A}$ called the expected matrix.
+
 \begin{equation}
 a_{ij}^{(k)}     = \frac {\alpha_j p(\vec{y}_i  ^{(k)}  | \vec{\mu_j} ^{(k)} , \Sigma_j ^{(k)}  )}{\sum_{j=1}^M \alpha_j p(\vec{y}_i  ^{(k)}  | \vec{\mu_j} ^{(k)} , \Sigma_j ^{(k)}  )} \label{expectedMatrix}
 \end{equation}
@@ -134,30 +135,23 @@ a_{ij}^{(k)}     = \frac {\alpha_j p(\vec{y}_i  ^{(k)}  | \vec{\mu_j} ^{(k)} , \
 
 The three sufficient statistics are computed in the maximization step.   They are computed by the following equations.
 \begin{eqnarray}
-\vec{\mu} _j ^{(k+1)} = \frac{\sum_{i=1} ^N a_{ij}^{(p)} \vec{y}_i} {\sum_{i=1}^N a_{ij} } \\
-\mathbf{\Sigma} _j ^{(k+1)} = \frac {\sum_{i=1}^N (\vec{y}_i \vec{\mu}_j ^{(p)} )^T(\vec{y}_i \vec{\mu}_j ^{(p)} ) } {\sum_{i=1}^N a^{(k)}_{ij}}  \\
-\alpha _j ^ {(k+1)} = \frac{1}{N} \sum_{i=1}^N a^{(k)}_{ij}
+\vec{\mu} _j ^{(k+1)} = \frac{\sum_{i=1} ^N a_{ij}^{(p)} \vec{y}_i} {\sum_{i=1}^N a_{ij} } \label{yamazaki98introduction_Mu} \\
+\mathbf{\Sigma} _j ^{(k+1)} = \frac {\sum_{i=1}^N (\vec{y}_i \vec{\mu}_j ^{(p)} )^T(\vec{y}_i \vec{\mu}_j ^{(p)} ) } {\sum_{i=1}^N a^{(k)}_{ij}} \label{yamazaki98introduction_Sigma} \\
+\alpha _j ^ {(k+1)} = \frac{1}{N} \sum_{i=1}^N a^{(k)}_{ij}  \label{yamazaki98introduction_proportions}
 \end{eqnarray}
 
 
-
-The obvious question is, what reduction on $\mathbf{A}$ is used to assess the convergence of the estimations?  %In this case, the determinant is used since it is always positive.    Another question is where is the proof that $|\mathbf{A}|$ is monotonic, in each iteration.   
-The following equation answers this question:
+As shown in equation \ref{duda-hart-stork-EM}, there is a convergence of probability parameters that can be determined by the $Q$ function, shown in equation \ref{Gaussian-Q}.  
 \begin{equation}
-Q ( \theta ^* ; \theta ) =\log (\prod_{i=1} ^N  a_{ii} )
+Q ( \theta ^* ; \theta ) =\log (\prod_{i=1} ^N  a_{ii} ) \label{Gaussian-Q}
 \end{equation}
 
 
-%In another observation, %it is clear that 
 Also, the initial guess for $\mathbf{A}$ can not be the zero matrix.  As such, the sufficient statistics would be rendered zero, and no convergence would occur.   Typically, the guesses are for $\mu$ to be scattered for each class and for the expected matrix to be 
 \[ 
 \mathbf{A} = \frac{1}{N} \mathbf{I}.
 \]
 
-% subsection origins_of_expected_maximization (end)
-
-\subsection{Demonstrations of the Expected Maximization Algorithm} % (fold)
-\label{sub:demonstrations_of_the_expected_maximization_algorithm}
 
 % subsection demonstrations_of_the_expected_maximization_algorithm (end)
 
@@ -166,47 +160,76 @@ Also, the initial guess for $\mathbf{A}$ can not be the zero matrix.  As such, t
 \section{Approach} % (fold)
 \label{sec:approach}
 
-\subsection{Univariate} % (fold)
-\label{sub:univariate}
+To start, the image is decomposed into a two dimensional array arranged from left to right and top to bottom.   This two dimensional array is then reassembled into a one dimensional array with the following mapping:
+\begin{eqnarray}
+s[i] = t[x][y] \\
+i = y(\bar{r}) + x
+\end{eqnarray}
+where
+\begin{itemize}
+	\item $\bar{r}$ is the row size
+	\item $y$ is the row index of the pixel, 
+	\item $x$ is the column index of the pixel, and 
+	\item $i$ is the single dimensional array index of the pixel.
+\end{itemize}
 
-% subsection univariate (end)
+The $s[i]$ are thereby considered the observed set and complete set is assumed to be a collection of Gaussian sets.   The number of Gaussian sets is left as a variable.   As in the example given by \cite{yamazaki98introduction}, the complete set is assumed to be a sum of the incomplete set and complete sets.  Thus, a framework is build to compute equations \ref{expectedMatrix}, \ref{yamazaki98introduction_Sigma}, and \ref{yamazaki98introduction_proportions}.  
 
-\subsection{Multivariate} % (fold)
-\label{sub:multivariate}
+An Matlab/Octave prototype \footnote{Prototype was authored by Code by Prof. Jose Vicente Manjon Herrera of the Universitat Politècnica de Val{e}ncia} obtains the mean, variance, and proportions from the EM algorithm.   A similar implementation made with the Cocoa Renaissance framework was constructed by the author of this report. % The Cocoa Renaissance framework was first published in the Big Nerd Ranch code fest 2005 as BNRMatrix and BNRWavelet.  
 
-% subsection multivariate (end)
-
-\subsection{Image Arrangement} % (fold)
-\label{sub:image_arrangement}
-
-% subsection image_arrangement (end)
-
-% section approach (end)
+Both algorithms make effective histograms based on the most intense gray level (assuming it is not 1.0).  The Cocoa version produces an 8 bit version to establish the histogram, and performs the remaining computations with the 16 version.   All values are normalize between $[0..1]$.  Both establish a set of parameters for scaling, minimum and maximum values.   The log-likelihood value is determined in both expectation and maximization step for comparison.   If the absolute difference between the two log-likelihood values are within a margin of error, the iteration stops.
 
 \section{Results} % (fold)
 \label{sec:results}
 
-\subsection{Expected Maximization Images} % (fold)
-\label{sub:expected_maximization_images}
 
-% subsection expected_maximization_images (end)
+The Octave version can not plot images, but the output of vectors from the Octave can be plotted with GNUplot.   The main histogram of the human eye is shown in figure \ref{fig:probability-2}.  This plot shows that the composite image pixel dominance in the low range below 20 and above 50.  In figure \ref{fig:probability}, the results of the EM segmentation is shown.   In this case, one can see the contributions of 5 Gaussian distributions and that combined they almost fit the original.  Also, we can see that certain sections of the image should be distinguishably separated by this filter.
 
-\subsection{Distinguishing the Eye} % (fold)
-\label{sub:distinguishing_the_eye}
 
-% subsection distinguishing_the_eye (end)
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[height=4in]{probability-2.png}
+	\caption{Histogram of the Eye image example}
+	\label{fig:probability-2}
+\end{figure}
 
-\subsection{Performance Under the CPU} % (fold)
-\label{sub:performance_under_the_cpu}
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[height=4in]{probability.png}
+	\caption{Histogram of the Eye image example with EM Segements}
+	\label{fig:probability}
+\end{figure}
 
-% subsection performance_under_the_cpu (end)
+With the Cocoa implemented version we can the images themselves and play a little the images.  The interface I provided for this program is as shown in \ref{fig:segmentsPanel}.  We can see that the user can select how many Gaussians to apply, and when the computations are performed the sufficient statistics of each Gaussian is listed.  When a sufficient statistic is selected, a filter based on that statistic is applied, as in figure \ref{fig:fiveEmSegments}.  We can see the original image of the eye along with 5 different EM based filters.
 
-\subsection{Performance Under the Graphics Processing Unit} % (fold)
-\label{sub:performance_under_the_graphics_processing_unit}
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[height=3in]{segmentsPanel.png}
+	\caption{EM Segment Control}
+	\label{fig:segmentsPanel}
+\end{figure}
 
-% subsection performance_under_the_graphics_processing_unit (end)
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[angle=90,height=8in]{fiveEmSegments.png}
+	\caption{Five EM Segments of the Eye and the Original}
+	\label{fig:fiveEmSegments}
+\end{figure}
+
 
 % section results (end)
+
+\section{Conclusions} % (fold)
+\label{sec:conclusions}
+
+Both iteratively proceed through expectation and maximization step.  The Cocoa version omits adding an $\epsilon$ to the scaled probability calculation, which may be throwing off the Cocoa version by a shift on the x domain.
+
+
+Also, one filter was difficult to see since does not favor the higher intensity pixels found in the center, and the rest appears dark without that center.
+
+A closer match in the Cocoa version may alleviate some distinction troubles.  Also, a OpenCL plug-in equivalent to other more powerful image editors may be provide a better approach allowing the other filters to be applied to examine the potential of this EM segment filter. 
+
+% section conclusions (end)
 
 \bibliographystyle{unsrt}
 \bibliography{../../patternNotes.bib}
